# VoteFight

./: .gitignore  PROGRESS.md  instructions.md  plan.md  roadmap.md
.cursor/rules/: accessibility-standards.mdc  advanced-automation.mdc  ai-assistant-behavior.mdc  ai-powered-development.mdc  component-patterns.mdc  constants-enums.mdc  cursor-rules-best-practices.mdc  data-privacy.mdc  deployment-guidelines.mdc  development-workflow.mdc  drf-serializers.mdc  error-handling.mdc  performance-optimization.mdc  security-guidelines.mdc  security-rules.mdc  seo-rules.mdc  votefight-architecture.mdc
.cursor/rules/frontend/: api-patterns.md  api-standards.md  automated-setup.md  component-patterns.md  engineering-standards.md  import-standards.md  state-management.md  testing-patterns.md  votefight-patterns.md
backend/: README.md  manage.py  pyproject.toml
backend/.cursor/rules/: agent-workflows.mdc  api-patterns.mdc  automated-testing-agent.mdc  django-styleguide.mdc  safe-automation.mdc
backend/battles/models/: __init__.py  battle.py  choices.py  element.py  vote.py
backend/battles/selectors/: __init__.py  battle_selectors.py  element_selectors.py  vote_selectors.py
backend/battles/services/: __init__.py  battle_services.py  trending_services.py  vote_services.py
backend/users/models/: __init__.py  choices.py  user.py
backend/utils/: models.py
backend/vote_fight/: asgi.py  settings.py  urls.py  wsgi.py
backend/vote_fight/settings/: base.py  development.py  production.py
frontend/: package-lock.json  package.json
frontend/.cursor/rules/: battle-ui-design.mdc  coding-standards.mdc  multilingual-seo.mdc  testing-rules.mdc
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/@[username]/: page.tsx
frontend/src/components/battles/: BattleCard.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/modals/: CreateBattleModal.tsx
frontend/src/components/pages/: BattleDetailPage.tsx  HomePage.tsx  (+1 more)
frontend/src/hooks/: useAuth.ts  useBattles.ts  useVoting.ts
frontend/src/mocks/: data.ts
frontend/src/services/: apiClient.ts  battleService.ts  mockApiClient.ts  userService.ts
frontend/src/types/: api.ts
(+7 files in other folders)
