[tool.poetry]
name = "votefight-backend"
version = "0.1.0"
description = "VoteFight - Social Voting Platform Backend"
authors = ["VoteFight Team <team@votefight.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.0"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.0"
django-environ = "^0.11.0"
psycopg2-binary = "^2.9.0"
redis = "^4.6.0"
celery = "^5.3.0"
django-celery-beat = "^2.5.0"
django-celery-results = "^2.5.0"
pillow = "^10.0.0"
django-storages = "^1.14.0"
boto3 = "^1.28.0"
django-redis = "^5.4.0"
django-filter = "^23.0"
drf-spectacular = "^0.26.0"
django-ratelimit = "^4.0.0"
django-extensions = "^3.2.0"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-django = "^4.5.0"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
django-debug-toolbar = "^4.2.0"
django-stubs = "^4.2.0"
djangorestframework-stubs = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
known_first_party = ["vote_fight", "battles", "users", "media", "tasks", "utils"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "DJANGO", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "factory.*",
    "celery.*",
    "redis.*",
    "boto3.*",
    "botocore.*",
]
ignore_missing_imports = true
